[package]
name = "pass"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pass"
src = "src/main.rs"

[lib]
name = "pass"
src = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
